--- a/UI/ventanaPrincipal.ui
+++ b/UI/ventanaPrincipal.ui
@@ -621,7 +621,7 @@ border-bottom:0.1px solid #000;</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <property name="spacing">
-           <number>0</number>
+           <number>5</number>
           </property>
           <property name="leftMargin">
            <number>0</number>
@@ -745,6 +745,21 @@ QPushButton:hover{
            </widget>
           </item>
           <item>
+           <widget class="QLabel" name="lblTexto">
+            <property name="font">
+             <font>
+              <family>Georgia</family>
+              <pointsize>15</pointsize>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
+            </property>
+            <property name="text">
+             <string>INICIO</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <spacer name="horizontalSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -762,8 +777,6 @@ QPushButton:hover{
             <property name="styleSheet">
              <string notr="true">#contCuenta {
 	
-	border-radius:8px;
-	padding:5px;
 	
 }</string>
             </property>
@@ -792,7 +805,7 @@ QPushButton:hover{
              <item>
               <widget class="QFrame" name="frame_15">
                <property name="styleSheet">
-                <string notr="true"/>
+                <string notr="true">padding:5px;</string>
                </property>
                <property name="frameShape">
                 <enum>QFrame::StyledPanel</enum>
@@ -802,7 +815,7 @@ QPushButton:hover{
                </property>
                <layout class="QHBoxLayout" name="horizontalLayout_2">
                 <property name="spacing">
-                 <number>0</number>
+                 <number>10</number>
                 </property>
                 <property name="leftMargin">
                  <number>0</number>
@@ -817,21 +830,6 @@ QPushButton:hover{
                  <number>0</number>
                 </property>
                 <item>
-                 <widget class="QLabel" name="label_8">
-                  <property name="font">
-                   <font>
-                    <pointsize>15</pointsize>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true"/>
-                  </property>
-                  <property name="text">
-                   <string>Mi Cuenta</string>
-                  </property>
-                 </widget>
-                </item>
-                <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
                  <widget class="QPushButton" name="btnLogut">
                   <property name="minimumSize">
                    <size>
@@ -841,17 +839,29 @@ QPushButton:hover{
                   </property>
                   <property name="maximumSize">
                    <size>
-                    <width>40</width>
+                    <width>16777215</width>
                     <height>16777215</height>
                    </size>
+                  </property>
+                  <property name="font">
+                   <font>
+                    <family>Georgia</family>
+                    <pointsize>11</pointsize>
+                    <weight>50</weight>
+                    <bold>false</bold>
+                   </font>
                   </property>
                   <property name="cursor">
                    <cursorShape>PointingHandCursor</cursorShape>
                   </property>
+                  <property name="layoutDirection">
+                   <enum>Qt::RightToLeft</enum>
+                  </property>
                   <property name="styleSheet">
                    <string notr="true">QPushButton{
 	background:#fff;
-	border-radius:18px;
+	border:none;
+	border-radius:5px;
 	padding:3px 10px
 }
 
@@ -863,15 +873,15 @@ QPushButton:hover{
 </string>
                   </property>
                   <property name="text">
-                   <string/>
+                   <string>MI CUENTA  </string>
                   </property>
                   <property name="icon">
                    <iconset>
-                    <normaloff>../../../Downloads/usuario.png</normaloff>../../../Downloads/usuario.png</iconset>
+                    <normaloff>../imagenes/boton-de-cuenta-redonda-con-usuario-dentro.png</normaloff>../imagenes/boton-de-cuenta-redonda-con-usuario-dentro.png</iconset>
                   </property>
                   <property name="iconSize">
                    <size>
-                    <width>25</width>
+                    <width>30</width>
                     <height>35</height>
                    </size>
                   </property>
@@ -890,13 +900,11 @@ QPushButton:hover{
                </property>
                <property name="font">
                 <font>
-                 <pointsize>17</pointsize>
+                 <pointsize>14</pointsize>
                 </font>
                </property>
                <property name="styleSheet">
-                <string notr="true">border:none;
-padding:5px;
-</string>
+                <string notr="true"/>
                </property>
                <property name="editable">
                 <bool>false</bool>
@@ -1049,7 +1057,7 @@ border-radius:20px;</string>
                    </property>
                    <layout class="QHBoxLayout" name="horizontalLayout_7">
                     <property name="spacing">
-                     <number>10</number>
+                     <number>20</number>
                     </property>
                     <property name="leftMargin">
                      <number>0</number>
@@ -1064,35 +1072,11 @@ border-radius:20px;</string>
                      <number>0</number>
                     </property>
                     <item>
-                     <widget class="QLabel" name="label_3">
-                      <property name="font">
-                       <font>
-                        <family>Georgia</family>
-                        <pointsize>12</pointsize>
-                        <weight>75</weight>
-                        <bold>true</bold>
-                       </font>
-                      </property>
-                      <property name="styleSheet">
-                       <string notr="true">padding:8px 5px;</string>
-                      </property>
-                      <property name="text">
-                       <string>MATRICULAS DE ALUMNOS</string>
-                      </property>
-                      <property name="alignment">
-                       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-                      </property>
-                      <property name="wordWrap">
-                       <bool>false</bool>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
                      <widget class="QFrame" name="barraBus">
                       <property name="maximumSize">
                        <size>
-                        <width>500</width>
-                        <height>56</height>
+                        <width>16777215</width>
+                        <height>16777215</height>
                        </size>
                       </property>
                       <property name="font">
@@ -1173,34 +1157,46 @@ border-radius:20px;</string>
                     </item>
                     <item>
                      <widget class="QPushButton" name="btnRegistrar">
-                      <property name="maximumSize">
+                      <property name="minimumSize">
                        <size>
                         <width>130</width>
-                        <height>43</height>
+                        <height>50</height>
                        </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>16777215</height>
+                       </size>
+                      </property>
+                      <property name="font">
+                       <font>
+                        <pointsize>11</pointsize>
+                       </font>
                       </property>
                       <property name="cursor">
                        <cursorShape>PointingHandCursor</cursorShape>
                       </property>
                       <property name="styleSheet">
                        <string notr="true">
+
 QPushButton{
 	border:none;
-	border:1px solid #000;
+	
 
-	padding:5px;
-	background:#171717;
+
+	background:#1E9DE0;
 	color:#fff;
 	border-radius:10px
 }
 
 
 QPushButton:hover{
-	background:#313131;
+	background:#408EB7;
 }</string>
                       </property>
                       <property name="text">
-                       <string>REGISTRAR</string>
+                       <string>MATRICULAR</string>
                       </property>
                      </widget>
                     </item>
@@ -1558,7 +1554,7 @@ border-radius:20px;</string>
                    </property>
                    <layout class="QHBoxLayout" name="horizontalLayout_5">
                     <property name="spacing">
-                     <number>10</number>
+                     <number>20</number>
                     </property>
                     <property name="leftMargin">
                      <number>0</number>
@@ -1573,26 +1569,11 @@ border-radius:20px;</string>
                      <number>0</number>
                     </property>
                     <item>
-                     <widget class="QLabel" name="label_9">
-                      <property name="font">
-                       <font>
-                        <family>Georgia</family>
-                        <pointsize>12</pointsize>
-                        <weight>75</weight>
-                        <bold>true</bold>
-                       </font>
-                      </property>
-                      <property name="text">
-                       <string>REGISTRO DE ALUMNOS</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
                      <widget class="QFrame" name="barraBusAl">
                       <property name="maximumSize">
                        <size>
-                        <width>500</width>
-                        <height>56</height>
+                        <width>16777215</width>
+                        <height>16777215</height>
                        </size>
                       </property>
                       <property name="styleSheet">
@@ -1663,11 +1644,28 @@ border-radius:20px;</string>
                     </item>
                     <item>
                      <widget class="QPushButton" name="pushButton">
-                      <property name="maximumSize">
+                      <property name="minimumSize">
                        <size>
                         <width>130</width>
-                        <height>43</height>
+                        <height>0</height>
                        </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>16777215</height>
+                       </size>
+                      </property>
+                      <property name="sizeIncrement">
+                       <size>
+                        <width>0</width>
+                        <height>-13824</height>
+                       </size>
+                      </property>
+                      <property name="font">
+                       <font>
+                        <pointsize>11</pointsize>
+                       </font>
                       </property>
                       <property name="cursor">
                        <cursorShape>PointingHandCursor</cursorShape>
@@ -1677,17 +1675,17 @@ border-radius:20px;</string>
 
 QPushButton{
 	border:none;
-	border:1px solid #000;
+	
 
 
-	background:#171717;
+	background:#1E9DE0;
 	color:#fff;
 	border-radius:10px
 }
 
 
 QPushButton:hover{
-	background:#313131;
+	background:#408EB7;
 }</string>
                       </property>
                       <property name="text">
@@ -1874,7 +1872,7 @@ border-radius:20px;</string>
                    </property>
                    <layout class="QHBoxLayout" name="horizontalLayout_3">
                     <property name="spacing">
-                     <number>10</number>
+                     <number>20</number>
                     </property>
                     <property name="leftMargin">
                      <number>0</number>
@@ -1889,27 +1887,17 @@ border-radius:20px;</string>
                      <number>0</number>
                     </property>
                     <item>
-                     <widget class="QLabel" name="label_10">
-                      <property name="font">
-                       <font>
-                        <family>Georgia</family>
-                        <pointsize>12</pointsize>
-                        <weight>75</weight>
-                        <italic>false</italic>
-                        <bold>true</bold>
-                       </font>
-                      </property>
-                      <property name="text">
-                       <string>PAGOS DE ALUMNOS</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
                      <widget class="QFrame" name="frame_20">
                       <property name="maximumSize">
                        <size>
-                        <width>500</width>
-                        <height>56</height>
+                        <width>16777215</width>
+                        <height>16777215</height>
+                       </size>
+                      </property>
+                      <property name="sizeIncrement">
+                       <size>
+                        <width>-13824</width>
+                        <height>0</height>
                        </size>
                       </property>
                       <property name="styleSheet">
@@ -1982,30 +1970,35 @@ border-radius:20px;</string>
                       </property>
                       <property name="maximumSize">
                        <size>
-                        <width>130</width>
-                        <height>43</height>
+                        <width>0</width>
+                        <height>16777215</height>
                        </size>
+                      </property>
+                      <property name="font">
+                       <font>
+                        <pointsize>11</pointsize>
+                       </font>
                       </property>
                       <property name="styleSheet">
                        <string notr="true">
 
 QPushButton{
 	border:none;
-	border:1px solid #000;
+	
 
 
-	background:#171717;
+	background:#1E9DE0;
 	color:#fff;
 	border-radius:10px
 }
 
 
 QPushButton:hover{
-	background:#313131;
+	background:#408EB7;
 }</string>
                       </property>
                       <property name="text">
-                       <string>REGISTRAR</string>
+                       <string>ACTUALIZAR</string>
                       </property>
                      </widget>
                     </item>
